Rework
Java 25
Update Scripts Compile
etc